--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pin Generator</title>
+    <title>Pin Generator With Verification</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="notify-section" id="notifyWrite"><p> 🖊️ Generate and Write the Pin then try again</p></div>
+  <div class="notify-section" id="notifyWrite"><p> 🖊️ Generate and Write the Pin Number then try again</p></div>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -64,20 +64,17 @@
            let outputString = output.toString();
            if (outputString.length == 3){
             let dot = ""
-           let number = outputString;
-           let fullValue = dot.concat(0, number);
+           let fullValue = dot.concat(0, outputString);
            document.getElementById('randomInput').value = fullValue;
            }
            if (outputString.length == 2){
             let dot = ""
-           let number = outputString;
-           let fullValue = dot.concat(0,0, number);
+           let fullValue = dot.concat(0,0, outputString);
            document.getElementById('randomInput').value = fullValue;
            }
            if (outputString.length == 1){
             let dot = ""
-           let number = outputString;
-           let fullValue = dot.concat(0,0,0, number);
+           let fullValue = dot.concat(0,0,0, outputString);
            document.getElementById('randomInput').value = fullValue;
            }
            console.log(outputString.length)
